# OctoPrint-GitFiles

./: README.md  Taskfile.yml  pyproject.toml
extras/: README.txt  gitfiles.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_gitfiles/: __init__.py
octoprint_gitfiles/static/js/: gitfiles.js
translations/: README.txt
